<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_switch"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/switchRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/password_remember"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        android:textSize="24sp" />

    <ToggleButton
        android:id="@+id/togglePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="send"
        android:text="@string/send" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />

</LinearLayout>